          of conversion script to /dev/NULL.

	* data/gtkpod.glade (prefs_dialog): get rid of "Only
          'activatable' widgets can be packed into the action area of
          a GtkDialog" warning. Changes layouts of buttons at the
          bottom of the window slightly ("Revert" is now centered
          instead of being grouped on the right together with the
          "Close" button).

2008-04-18 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/fileselection.c: add multiple directories patch by Alex
          Pounds. Fixes bug that limited adding of directories to one
          at a time.

2008-04-13 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/display_photo.c (gphoto_is_photo_playlist,
          gphoto_ipod_supports_photos, gphoto_display_photo_window,
          debug_list_photos): prevent segfault if called with NULL
          argument.

	  (gphoto_add_image_to_database,
	  gphoto_add_image_to_iconview): sanity checks

	* context_menus.c (pm_context_menu_init): check for selected
          playlist before making further checks. Thanks to Alex
          Pounds.

	* po/de.po: updated German translation. Thanks to Kai-Ove
          Pietsch.

2008-04-09 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* scripts/sync-tomboy.sh
	  (Olivier Crete <tester at tester dot ca>):
	  Strip all tomboy tags with the power of sed

2008-04-09 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/file_convert.c (transfer_transfer_track): removed
          unnecessary g_mutex_unlock(). Thanks to Klaus Heinz.

2008-03-29  Todd Zullinger  <tmzullinger at users.sourceforge.net>

	* configure.in: Remove unused references to libgnomecanvas

	* configure.in: Handle the case where LEX is a path, from
	  NetBSD via Klaus Heinz (fixes SF tracker #1920207)

2008-03-17 P.G. Richardson <phantom_sf at users.sourceforge.net>

  * src/display_photo.c
  * src/misc_input.c
  
    Fix for segfault in get_user_string function.
